# LLM4Humanities

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/binary_user_case/: binary_config.json
data/multiclass_user_case/: multiclass_config.json
manual_annotator/: annotator_setup.py  app_core.py  column_selection.py  data_download.py  label_definition.py  rating_scales.py  row_annotation.py
qualitative_analysis/: config.py  cost_estimation.py  data_processing.py  model_interaction.py  parsing.py
qualitative_analysis/metrics/: alt_test.py  classification.py  kappa.py  krippendorff.py
streamlit_app/: analysis.py  app_core.py  column_selection.py  data_upload.py  evaluation.py  evaluation_mappings.py  field_constraints.py  field_selection.py  llm_configuration.py  prompt_construction.py  session_management.py
tests/: test_evaluation_mappings.py
